# Enterprise-DDOS-Attack-Detection-System

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  nis_projektin.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: index.html  login.html
dashboard/css/: charts.css  components.css  enterprise-theme.css  login.css  main.css  responsive.css
dashboard/js/: alerts.js  app.js  charts.js  login.js  utils.js  websocket.js
deploy/docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml  nginx.conf
deploy/helm/: Chart.yaml  values.yaml
deploy/kubernetes/: api-deployment.yaml  configmap.yaml  dashboard-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  secrets.yaml  service.yaml
deploy/terraform/: main.tf  variables.tf
docs/: api_specification.md  executive_summary.md  operations_runbook.md  technical_documentation.md
monitoring/prometheus/: alerts.yml  prometheus.yml  recording_rules.yml
scripts/: run.ps1  run.sh  setup.ps1  setup.sh
src/: __init__.py
src/alerting/: alert_engine.py  classifier.py  correlator.py  escalation.py  rate_limiter.py
src/api/: auth.py  redaction.py  server.py
src/cli/: create_admin.py
src/config/: kafka_config.py  logging_config.py  settings.py  spark_config.py
src/control/: __init__.py  response_control.py
src/detection/: autoencoder.py  baseline.py  cache_metadata.py  cicddos_training.py  ensemble_model.py  explainability.py  gradient_boosting.py  isolation_forest.py  live_attack_gate.py  model_registry.py  random_forest.py  training_data.py
src/ingestion/: kafka_producer.py  packet_capture.py  schema_registry.py  serialization.py  traffic_simulator.py  tshark_capture.py
src/local_security/: __init__.py  wifi_guard.py  wireless_intelligence.py
src/monitoring/: health.py  metrics.py  sla.py  tracing.py
src/processing/: backpressure.py  feature_engine.py  feature_store.py  stream_processor.py  window_aggregator.py
src/response/: __init__.py  automation.py  compliance.py  forensics.py  mitigation.py  response_engine.py  traffic_shaping.py
src/storage/: __init__.py  audit_repository.py  database.py  migrations.py  repositories.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_safe_api.py
tests/performance/: test_throughput.py
(+32 files in other folders)
